deploy/dubboapi1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dubboapi1
    type: dubboapi
  name: dubboapi1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubboapi1
      type: dubboapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dubboapi1
        type: dubboapi
    spec:
      containers:
      - image: localhost:5000/dubboapi:v1
        name: dubboapi
        resources: {}
status: {}
