deploy/loadBalance-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubboapi-svc
spec:
  host: dubboapi-svc
  trafficPolicy:
    loadBalancer: 
      simple: RANDOM
  subsets:
  - name: dubboapi1
    labels:
      app: dubboapi1
  trafficPolicy:
    loadBalancer: 
      simple: ROUND_ROBIN
  - name: dubboapi2
    labels:
      app: dubboapi2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubboapi-svc
spec:
  hosts:
  - dubboapi-svc
  gateways:
  - tcp-gateway
  tcp:
  - match:
    - port: 31400
      gateways:
        - tcp-gateway
    route:
    - destination:
        host: dubboapi-svc
        port:
          number: 20880
        subset: dubboapi1
      weight: 90
    - destination:
        host: dubboapi-svc
        port:
          number: 20880
        subset: dubboapi2
      weight: 10
